--- a/config.properties.example
+++ b/config.properties.example
@@ -1,15 +1,15 @@
-KERNEL_SOURCE=
-KERNEL_SOURCE_BRANCH=
-KERNEL_CONFIG=
-KERNEL_IMAGE_NAME=
+KERNEL_SOURCE=https://github.com/Inkypen79/kernel_xiaomi_odin.git
+KERNEL_SOURCE_BRANCH=lineage-19.1
+KERNEL_CONFIG=gki_defconfig
+KERNEL_IMAGE_NAME=Image.gz
 ARCH=arm64
 
 ENABLE_CLANG=true
-USE_AOSP_CLANG=true
-AOSP_CLANG_SYSTEM=linux-x86
-AOSP_CLANG_BRANCH=master
-AOSP_CLANG_VERSION=r450784e
-USE_CUSTOM_CLANG=false
+USE_AOSP_CLANG=false
+AOSP_CLANG_SYSTEM=
+AOSP_CLANG_BRANCH=
+AOSP_CLANG_VERSION=
+USE_CUSTOM_CLANG=true
 CUSTOM_CLANG_SOURCE=https://github.com/magojohnji/ZyCromerZ-Clang.git
 CUSTOM_CLANG_BRANCH=main
 
@@ -31,11 +31,11 @@ CUSTOM_GCC_32_BRANCH=
 CUSTOM_GCC_32_BIN=arm-linux-androideabi-
 
 ENABLE_KERNELSU=true
-KERNELSU_INSTALLER=
+KERNELSU_INSTALLER=https://raw.githubusercontent.com/tiann/KernelSU/main/kernel/setup.sh
 KERNELSU_TAG=main
 KSU_EXPECTED_SIZE=
 KSU_EXPECTED_HASH=
-BUILD_KERNELSU_BOOT_IMG=true
+BUILD_KERNELSU_BOOT_IMG=false
 KERNELSU_SOURCE_BOOT_IMAGE=
 
 DISABLE-LTO=false
